tests/errors/method_unknown_name.ptt
// Calling an unknown method on a struct receiver should error clearly.
Foo is { x int }

spark {
  f is Foo()
  f.does_not_exist()
}
